# nth-roots-of-unity

./: Makefile  README.md  main.py  pyproject.toml
animations/: advanced_concepts.py  core_concepts.py  introduction.py  specific_roots.py
manim/: equations.py  introduction.py
slides/: slide_generator.py
slides/content/: 01_introduction.md
slides/output/: presentation.html
slides/templates/: presentation.html
