[project]
name = "nth-roots-of-unity"
version = "0.1.0"
description = "A presentation on nth roots of unity using Manim and custom slides"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "manim>=0.19.0",
    "sympy>=1.13.3",
    "markdown",
    "jinja2",
    "pygments"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
